--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,12 +9,12 @@
 
 	<body>
 		<div id="generator">
-			<h1 id="placeholder">
+			<h1>
 				Benedict Timothy Carlton Cumberbatch
 			</h1>
 
 			<button type="button">
-				Make name
+				Name it
 			</button>
 		</div>
 
