--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	</head>
 
 	<body>
-		<div id="generator">
+		<div>
 			<h1>
 				Benedict Timothy Carlton Cumberbatch
 			</h1>
 
-			<button type="button">
+			<button type="button" id="generator">
 				Name it
 			</button>
 		</div>
