--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</button>
 		</div>
 
-		<script src="main.js"></script>
+		<script src="cumberbatch.js"></script>
 		<script>
 			cumberbatch.render();
 			document.getElementById('generator').addEventListener('click', () => cumberbatch.generator());
