--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Cumberbatch</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Cumberbatch</title>
+		<meta name="theme-color" content="#4cabef">
 		<link rel="stylesheet" href="main.css">
 	</head>
 
@@ -21,7 +22,7 @@
 		<script src="cumberbatch.js"></script>
 		<script>
 			cumberbatch.render();
-			document.getElementById('generator').addEventListener('click', () => cumberbatch.generator());
+			document.getElementById('generator').addEventListener('click', () => cumberbatch.generate());
 		</script>
 	</body>
 </html>
