--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</div>
 
 		<script src="cumberbatch.js"></script>
+		<script src="voice.js"></script>
 		<script>
 			cumberbatch.render();
 			document.getElementById('generator').addEventListener('click', () => cumberbatch.generate());
