--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 		<link rel="manifest" href="manifest.webmanifest">
-		<meta name="msapplication-TileColor" content="#4cabef">
+		<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#4cabef">
+		<link rel="shortcut icon" href="img/favicon.ico">
+		<meta name="msapplication-TileColor" content="#ff0000">
+		<meta name="msapplication-config" content="browserconfig.xml">
 		<meta name="theme-color" content="#4cabef">
 	</head>
 
