--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</symbol>
 		</svg>
 
-		<button type="button" class="notification" id="notification">
+		<button type="button" class="notification" id="notification" data-interval="10">
 			<svg>
 				<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-notification"></use>
 			</svg>
