--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Cumberbatch</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="css/main.css">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
@@ -66,7 +66,7 @@
 			var cumberbatch = new Cumberbatch();
 			document.getElementById('generator').addEventListener('click', cumberbatch.generate);
 		</script>
-		<script src="voice.js"></script>
-		<script src="notification.js"></script>
+		<script src="js/voice.js"></script>
+		<script src="js/notification.js"></script>
 	</body>
 </html>
